<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:fillViewport="false"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:orientation="vertical"

        >


        <EditText
            android:layout_margin="20dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true"
            android:hint="@string/probel"
            android:inputType="textMultiLine"
            android:text="@string/name"
            android:importantForAutofill="no"
             />
        <EditText
            android:layout_margin="20dp"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:text="@string/description"
            android:importantForAutofill="no"
            android:hint="@string/probel" />
        <EditText
            android:layout_margin="20dp"
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/cost"
            android:importantForAutofill="no"
            android:hint="@string/probel" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img1" />


        <Button

            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img2" />



        <Button

            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_weight="2"
                android:text="@string/all"
                android:textSize="24sp"
                android:layout_marginLeft="30dp" />

            <Button
                android:id="@+id/categoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ruby_round"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
               android:text="@string/set"
                android:layout_marginLeft="25dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
