<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="0dp"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:background="@drawable/ramka"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

        </androidx.viewpager.widget.ViewPager>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:clickable="false">

            <TextView
                android:id="@+id/prCost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="1dp"
                android:text="@string/inchvor_gin"
                android:textSize="14sp"
                app:fontFamily="sans-serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/ruby_round"
            android:clickable="false">

            <TextView
                android:id="@+id/prName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/light_grey"
                android:padding="2dp"
                android:text="@string/long_text"
                android:textSize="14sp"
                app:fontFamily="sans-serif"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textIsSelectable="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rect_round"
            android:padding="2dp"
            android:minLines="10"
            android:text="@string/meta" />
        <TextView
            android:id="@+id/id"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"


            android:layout_marginLeft="7dp"
            android:text="@string/id"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>